--- a/src/components/Comment/Comment.css
+++ b/src/components/Comment/Comment.css
@@ -7,6 +7,10 @@
   font-weight: 700;
 }
 
+.comment__author--active {
+  color: #1e90ff;
+}
+
 .comment__text {
   font-size: 12px;
   font-weight: 700;
