--- a/src/components/Comment/Comment.css
+++ b/src/components/Comment/Comment.css
@@ -1,9 +1,10 @@
 .comment {
-  padding: 5px 5px 5px 40px;
+  padding: 5px 0;
 }
 
 .comment .comment {
   border-left: 2px solid #dcdcdc;
+  padding: 5px 5px 5px 40px;
 }
 
 .comment__author {
