--- a/src/features/comments/Comments.css
+++ b/src/features/comments/Comments.css
@@ -1,6 +1,13 @@
+.comments {
+  padding: 0 40px;
+}
+
 .comments__title {
   font-size: 1.6rem;
   font-weight: 700;
   margin-bottom: 20px;
-  padding-left: 40px;
+}
+
+.comments__authors {
+  margin-bottom: 20px;
 }
